# 2drift

./: .clang-format  .gitignore  CMakeLists.txt  README.md
extlibs/glad/: CMakeLists.txt
extlibs/glad/include/glad/: glad.h
extlibs/glad/src/: glad.c
extlibs/stb/: CMakeLists.txt
res/: screen.frag  screen.vert  sprite.frag  sprite.vert
src/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  Core.cpp  Core.hpp
src/Core/Managers/: FileManager.cpp  FileManager.hpp  InputManager.cpp  InputManager.hpp  Manager.cpp  Manager.hpp  RenderingManager.cpp  RenderingManager.hpp  ResourceManager.cpp  ResourceManager.hpp  SceneManager.cpp  SceneManager.hpp  WindowManager.cpp  WindowManager.hpp
src/Core/Managers/Stuff/: Scene.cpp  Scene.hpp
src/Core/Rendering/: FrameBuffer.cpp  FrameBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderingQueue.cpp  RenderingQueue.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Core/Rendering/Stuff/: MaterialParameters.hpp  MeshGeometry.cpp  MeshGeometry.hpp  RenderingParameters.hpp  RenderingQueue.cpp  RenderingQueue.hpp  ShaderParameters.hpp
src/Core/Resources/: ResourcesScope.cpp  ResourcesScope.hpp  ShaderLoader.cpp  ShaderLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
src/Core/Resources/Stuff/: ResourcesScope.cpp  ResourcesScope.hpp
src/Core/Stuff/: Event.hpp  Hash.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.hpp  Tag.hpp  Time.cpp  Time.hpp  TypeString.hpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
src/Game/Components/: Car.hpp  General.hpp
src/Game/Rendering/: ScreenMaterial.cpp  ScreenMaterial.hpp  SpriteMaterial.cpp  SpriteMaterial.hpp
src/Game/Scenes/: MainScene.cpp  MainScene.hpp  MainSceneState.cpp  MainSceneState.hpp
src/Game/Stuff/: Scene.hpp  SceneEvents.hpp  SharedState.cpp  SharedState.hpp  System.cpp  System.hpp
src/Game/Systems/: CameraMovementSystem.cpp  CameraMovementSystem.hpp  CameraResizingSystem.cpp  CameraResizingSystem.hpp  CarMovementSystem.cpp  CarMovementSystem.hpp  General.hpp  InputSystem.cpp  InputSystem.hpp  PlayerCarControlSystem.cpp  PlayerCarControlSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SpriteRenderingSystem.cpp  SpriteRenderingSystem.hpp  System.cpp  System.hpp  WheelsPositioningSystem.cpp  WheelsPositioningSystem.hpp
src/Managers/: FileManager.cpp  FileManager.hpp  InputManager.cpp  InputManager.hpp  Manager.cpp  Manager.hpp  ResourceManager.cpp  ResourceManager.hpp  WindowManager.cpp  WindowManager.hpp
src/Resources/: ResourcesScope.cpp  ResourcesScope.hpp  TextureLoader.cpp  TextureLoader.hpp
src/Stuff/: Hash.hpp  ResourcesScope.cpp  ResourcesScope.hpp  Time.cpp  Time.hpp
stuff/: car.psd  map.psd  splitimage.py
